Getting all users
I've made all changes to get all users
